# coretrace-compiler

./: .gitignore  BTP-STACK-ANALYZER-F3.py  CMakeLists.txt  COMPILE.md  CONTRIBUTING.md  ISSUE_BTP_STACK_ANALYZER_F3.md  README.md  build.sh  main.cc  test.c
.github/workflows/: build.yml  clang-format.yml
extern-project/: CMakeLists.txt
extern-project/src/: main.cpp
extern-project/tests/: hello.c  hello.cpp
include/compilerlib/: attributes.hpp  compiler.h  toolchain.hpp
include/compilerlib/frontend/: optnone_action.hpp
include/compilerlib/instrumentation/: alloc.hpp  bounds.hpp  common.hpp  config.hpp  trace.hpp  vtable.hpp
scripts/: build-windows.ps1  format-check.sh  format.sh
scripts/ci/: commit_checker.py
scripts/git/: commit_msg_checker.py
src/cli/: args.cc  args.h  help.cc  help.h  main.cc
src/compilerlib/: compiler.cpp  toolchain.cpp
src/compilerlib/emit/: llvm_output.cpp  llvm_output.hpp
src/compilerlib/frontend/: optnone_action.cpp
src/compilerlib/instrumentation/: alloc.cpp  bounds.cpp  common.cpp  config.cpp  trace.cpp  vtable.cpp
src/runtime/: ct_instrument_runtime.cpp  ct_runtime_alloc.cpp  ct_runtime_backtrace.cpp  ct_runtime_bounds.cpp  ct_runtime_env.cpp  ct_runtime_helpers.h  ct_runtime_internal.h  ct_runtime_logging.cpp  ct_runtime_shadow.cpp  ct_runtime_state.cpp  ct_runtime_trace.cpp  ct_runtime_vtable.cpp
src/runtime/windows/: ct_runtime_alloc.cpp  ct_runtime_backtrace.cpp  ct_runtime_env.cpp  ct_runtime_vtable.cpp
test/: ct_alloc_basic.c  ct_alloc_growth.c  ct_autofree_aligned_alloc.c  ct_autofree_brk.c  ct_autofree_inttoptr.c  ct_autofree_inttoptr_escape.c  ct_autofree_local.c  ct_autofree_mmap.c  ct_autofree_new_nothrow.cpp  ct_autofree_posix_memalign.c  ct_autofree_ptrtoint.c  ct_autofree_ptrtoint_escape.c  ct_autofree_return_unused.c  ct_autofree_sbrk.c  ct_autofree_select.c  ct_autofree_select_escape.c  ct_new_delete.cpp  ct_new_delete_sized.cpp  ct_new_delete_variants.cpp  ct_realloc_zero.c  ct_shadow_pages.c  ct_vtable_basic.cpp  ct_vtable_diag_fake.cpp  ct_vtable_diag_freed.cpp  ct_vtable_diag_mismatch.cpp  ct_vtable_diag_null.cpp  ct_vtable_diag_stack_target.cpp  ct_vtable_interface.cpp  ct_vtable_multi.cpp  ct_vtable_uaf.cpp  ct_vtable_virtual_base.cpp  run_autofree_tests.sh
test/ctestfw/assertions/: compiler.py
test/docker/: Dockerfile
test/examples/: test_extern_project.py  test_help_smoke.py  test_smoke.py
test/examples/fixtures/: cpp_as_c.c  debug.c  hello.c  vtable.cpp
